feat: restructure project and add stealth sidecar workflows